@@ -3,8 +3,9 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MOD 0.9.5 beta 5 (rev 1825 - October 28, 2006)
+MOD 0.9.5 beta 5 (rev 1830 - October 28, 2006)
 ====================================
+* [FS#578] Fix errors to install and manager when running MySQL in one of the STRICT sql_mode settings. (1830)
 * [FS#615] QuickEdit should no longer break on non-enlish languages with longer text strings (1825)
 * [FS#614] Remove DisableCache from the install and add the disable cache functionality into the TemplateSwitcher plugin. (1818)
 * [FS#598] Prevent files beginning with a dot (eg. '.svn') from being listed in the manager theme dropdown box. (1809)
